<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
        <item android:id="@+id/action_privatekey"
            android:title="@string/privatekey"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item android:id="@+id/action_help2"
            android:title="@string/help"
            android:icon="@drawable/ic_action_help"
            android:orderInCategory="2"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/action_about"
            android:title="@string/about"
            android:orderInCategory="3"
            app:showAsAction="never" />
</menu>