<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.olley.formulacrypt.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/message"
        android:id="@+id/messageTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/console"
        android:id="@+id/consoleTitle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mainScroll"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/consoleScroll"
        android:layout_below="@+id/consoleTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="#FFDDDDDD">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/consoleRelLayout"
            android:gravity="left"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/consoleText"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainScroll"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/messageTitle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/plaintext"
                android:id="@+id/key1Title"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/key1Box"
                android:layout_below="@+id/key1Title"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/copyptBtn"
                android:inputType="textCapWords|textCapSentences|textShortMessage|textAutoCorrect|text|textCapCharacters" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ciphertext"
                android:id="@+id/key2Title"
                android:layout_below="@+id/key1Box"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/key2Box"
                android:layout_below="@+id/key2Title"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/copyctBtn"
                android:inputType="textCapWords|textCapSentences|textShortMessage|textAutoCorrect|text|textCapCharacters" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/publickey"
                android:id="@+id/key3Title"
                android:layout_below="@+id/key2Box"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/key3Box"
                android:layout_below="@+id/key3Title"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/copykeyBtn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert"
                android:id="@+id/convertBtn"
                android:layout_below="@+id/key3Box"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#FFFFFFFF" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:id="@+id/copyptBtn"
                android:layout_alignBottom="@+id/key1Box"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:id="@+id/copyctBtn"
                android:layout_alignBottom="@+id/key2Box"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:id="@+id/copykeyBtn"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/key3Box" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
